# ecommerce-customer-service

./: .gitignore  README.md  尚硅谷大模型项目之电商小二.md
customer-service-backend/: .env  main.py  pyproject.toml
customer-service-backend/atguigu/api/: app.py  dependencies.py  routers.py  schemas.py
customer-service-backend/atguigu/chitchat/: handler.py  responder.py
customer-service-backend/atguigu/conf/: config.py
customer-service-backend/atguigu/domain/: contexts.py  message.py  state.py
customer-service-backend/atguigu/engine/: dialogue_engine.py  dialogue_engine_builder.py
customer-service-backend/atguigu/infrastructure/: database.py  http_client.py  llm.py
customer-service-backend/atguigu/knowledge/: __init__.py  context_builder.py  handler.py  intents.py  planner.py  provider.py  responder.py
customer-service-backend/atguigu/models/: dialogue_state.py
customer-service-backend/atguigu/planning/: clarify.py  parser.py  plan.py  planner.py  validator.py
customer-service-backend/atguigu/prompts/: __init__.py  loader.py  transcript.py
customer-service-backend/atguigu/prompts/chitchat/: response.jinja2
customer-service-backend/atguigu/repository/: dialogue_repository.py
customer-service-backend/atguigu/service/: dialogue_service.py
customer-service-backend/atguigu/task/: handler.py
customer-service-backend/flow_config/: system_flows.yml  user_flows.yml
ecommerce-service-backend/: .env.example  README.md  main.py  pyproject.toml
ecommerce-service-backend/app/: __init__.py  api.py  app.py  config.py  database.py  models.py  schemas.py
(+32 files in other folders)
